# mcp-terminal

./: .envrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  docker-compose.yml  mcp_terminal.py  prompt.md  pyproject.toml  shell.nix
docs/: claude_desktop_integration.md  quickstart.md  uv_guide.md
filter/: blacklist.txt  whitelist.txt
src/: __init__.py
src/mcp_terminal/: __init__.py  server.py
src/mcp_terminal/controllers/: __init__.py  applescript.py  base.py  iterm.py  subprocess.py
src/mcp_terminal/security/: __init__.py  command_filter.py
src/mcp_terminal/tools/: __init__.py  file.py  terminal.py
tests/: __init__.py  test_command_filter.py  test_subprocess_controller.py  test_terminal_security.py
