[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-terminal"
version = "0.1.0"
description = "MCP Terminal Server for controlling terminal operations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MCP Terminal Developer" }
]
dependencies = [
    "iterm2>=2.9",
    "mcp[cli]>=1.7.1",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
iterm = ["iterm2>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_terminal"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[project.scripts]
mcp-terminal = "mcp_terminal.server:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
